--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+server.port=8080
+spring.datasource.url=jdbc:mysql://localhost:3306/computer
+spring.datasource.username=root
+spring.datasource.password=Juanita2012
+spring.jpa.hibernate.ddl-auto=create
